tweak(pnc): updated background

--- a/xtra/ui/pnc/css/index.css
+++ b/xtra/ui/pnc/css/index.css
@@ -24,7 +24,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: url(https://cdn.discordapp.com/attachments/1111316733937066055/1129133501912981564/pnc.png?size=4096) center;
+    background: url(https://cdn.discordapp.com/attachments/1195851571150467097/1218889914922569768/pnc_background.png?ex=66094eb1&is=65f6d9b1&hm=c4bf09b65f048be58431dcbd95c04b58d9de415cc1f5b7b74e887b069bfaa532&) center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
