tweak(chat): Debrand to global

--- a/chat/html/index.css
+++ b/chat/html/index.css
@@ -132,11 +132,11 @@ textarea:focus, input:focus {
     opacity: 0.75;
 }
 
-.twt {
+.global {
     background-color: rgba(64,64,64, 0.35);
 }
 
-.twt-trans {
+.global-trans {
     background-color: rgba(64,64,64, 0.2);
 }
 
