add(warnings): finish's new warning system
- Now displays the users hours & player ID!

- All new sleek design

- Available now!

--- a/xtra/ui/index.css
+++ b/xtra/ui/index.css
@@ -267,7 +267,7 @@ body {
 
 @font-face {
     font-family: "Akrobat-Bold";
-    src: url("https://cdn.cxtrastudios.net/content/fonts/Akrobat-Bold.otf") format("opentype");
+    src: url("https://cdn.cmgstudios.net/content/fonts/Akrobat-Bold.otf") format("opentype");
     font-weight: normal;
     font-style: normal
 }
